--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
-#spring.data.rest.base-path=/api
+spring.data.rest.base-path=/api
