Spring Security(WebSecurityConfigurerAdapter) in backend Closes #65

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 # spring.jpa.hibernate.ddl-auto=update
 spring.data.rest.base-path=/api
+
+#Adding Security
+spring.security.user.name=AhmedElsheikh
+spring.security.user.password=AhmedElsheikh
