Impl Jwt Closes #71

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 
 #Adding Security
-spring.security.user.name=AhmedElsheikh
-spring.security.user.password=AhmedElsheikh
+#spring.security.user.name=Ahmed
+#spring.security.user.password=Elsheikh
